--- a/scripts/stocks/fundamental_analysis.ipynb
+++ b/scripts/stocks/fundamental_analysis.ipynb
@@ -145,7 +145,7 @@
    ],
    "source": [
     "Industry = suffixes[7]\n",
-    "symbols = pd.read_excel(f\"../../data/static_files/LargeCap{Industry}.xlsx\",header=1)\n",
+    "symbols = pd.read_excel(f\"../../data/static_files/LargeCap{Industry}.xlsx\",header=1,style='default')\n",
     "symbols['Symbol'].fillna(\"-\",inplace=True)\n",
     "Tickers = list(symbols[(~symbols['Symbol'].astype(str).str.contains('-'))]['Symbol'])\n"
    ]
