--- a/scripts/stocks/fundamental_analysis.ipynb
+++ b/scripts/stocks/fundamental_analysis.ipynb
@@ -1396,6 +1396,119 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'TWLO': {'symbol': 'TWLO',\n",
+       "  'high52': 373.0,\n",
+       "  'low52': 62.1,\n",
+       "  'dividendAmount': 0.0,\n",
+       "  'dividendYield': 0.0,\n",
+       "  'dividendDate': ' ',\n",
+       "  'peRatio': 0.0,\n",
+       "  'pegRatio': 0.0,\n",
+       "  'pbRatio': 1.27413,\n",
+       "  'prRatio': 4.06181,\n",
+       "  'pcfRatio': 0.0,\n",
+       "  'grossMarginTTM': 47.96285,\n",
+       "  'grossMarginMRQ': 47.20275,\n",
+       "  'netProfitMarginTTM': 0.0,\n",
+       "  'netProfitMarginMRQ': 0.0,\n",
+       "  'operatingMarginTTM': 0.0,\n",
+       "  'operatingMarginMRQ': 0.0,\n",
+       "  'returnOnEquity': 0.0,\n",
+       "  'returnOnAssets': 0.0,\n",
+       "  'returnOnInvestment': 0.0,\n",
+       "  'quickRatio': 0.0,\n",
+       "  'currentRatio': 6.41803,\n",
+       "  'interestCoverage': 0.0,\n",
+       "  'totalDebtToCapital': 8.58174,\n",
+       "  'ltDebtToEquity': 9.27462,\n",
+       "  'totalDebtToEquity': 9.38733,\n",
+       "  'epsTTM': 0.0,\n",
+       "  'epsChangePercentTTM': 0.0,\n",
+       "  'epsChangeYear': 0.0,\n",
+       "  'epsChange': 0.0,\n",
+       "  'revChangeYear': 0.0,\n",
+       "  'revChangeTTM': 50.85012,\n",
+       "  'revChangeIn': 7.76718,\n",
+       "  'sharesOutstanding': 173307870.0,\n",
+       "  'marketCapFloat': 171.9796,\n",
+       "  'marketCap': 13816.82,\n",
+       "  'bookValuePerShare': 74.63229,\n",
+       "  'shortIntToFloat': 0.0,\n",
+       "  'shortIntDayToCover': 0.0,\n",
+       "  'divGrowthRate3Year': 0.0,\n",
+       "  'dividendPayAmount': 0.0,\n",
+       "  'dividendPayDate': ' ',\n",
+       "  'beta': 1.48964,\n",
+       "  'vol1DayAvg': 3400760.0,\n",
+       "  'vol10DayAvg': 3400760.0,\n",
+       "  'vol3MonthAvg': 90950350.0}}"
+      ]
+     },
+     "execution_count": 184,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "request_fundamentals(Tickers=['TWLO'],consumerKey=consumerKey,how='Dict')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'{\"INTC\":{\"fundamental\":{\"symbol\":\"INTC\",\"high52\":56.28,\"low52\":24.59,\"dividendAmount\":1.46,\"dividendYield\":5.41,\"dividendDate\":\"2022-11-04 00:00:00.000\",\"peRatio\":5.78257,\"pegRatio\":1.552034,\"pbRatio\":1.09406,\"prRatio\":1.50883,\"pcfRatio\":3.50063,\"grossMarginTTM\":49.84876,\"grossMarginMRQ\":36.46629,\"netProfitMarginTTM\":26.03074,\"netProfitMarginMRQ\":0.0,\"operatingMarginTTM\":20.2428,\"operatingMarginMRQ\":0.0,\"returnOnEquity\":20.49618,\"returnOnAssets\":11.75638,\"returnOnInvestment\":13.99834,\"quickRatio\":1.41135,\"currentRatio\":1.85862,\"interestCoverage\":0.0,\"totalDebtToCapital\":25.92793,\"ltDebtToEquity\":32.15634,\"totalDebtToEquity\":35.00366,\"epsTTM\":4.66402,\"epsChangePercentTTM\":3.7258,\"epsChangeYear\":0.0,\"epsChange\":0.0,\"revChangeYear\":0.0,\"revChangeTTM\":0.0,\"revChangeIn\":0.0,\"sharesOutstanding\":4.106E9,\"marketCapFloat\":4102.738,\"marketCap\":110738.8,\"bookValuePerShare\":10.56049,\"shortIntToFloat\":0.0,\"shortIntDayToCover\":0.0,\"divGrowthRate3Year\":0.0,\"dividendPayAmount\":0.365,\"dividendPayDate\":\"2022-12-01 00:00:00.000\",\"beta\":0.7127,\"vol1DayAvg\":4.525427E7,\"vol10DayAvg\":4.5254273E7,\"vol3MonthAvg\":9.1399097E8},\"cusip\":\"458140100\",\"symbol\":\"INTC\",\"description\":\"Intel Corporation - Common Stock\",\"exchange\":\"NASDAQ\",\"assetType\":\"EQUITY\"}}'"
+      ]
+     },
+     "execution_count": 182,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "symbolList = \",\".join([i for i in ['INTC']])\n",
+    "endpoint = f'''https://api.tdameritrade.com/v1/instruments?\n",
+    "    &symbol={symbolList}&projection=fundamental'''\n",
+    "page = requests.get(url=endpoint, \n",
+    "    params={'apikey' : consumerKey})\n",
+    "\n",
+    "page.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://api.tdameritrade.com/v1/instruments?\\n    &symbol=INTC&projection=fundamental'"
+      ]
+     },
+     "execution_count": 183,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "endpoint"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
